CHANGES IN VERSION 2.1.9
------------------------
 o add return NULL when DAVID fail (no enrichment found or wrong ID type) <2015-03-11, Wed>
 
CHANGES IN VERSION 2.1.8
------------------------
 o implement enrichDAVID <2015-03-07, Fri>
 
CHANGES IN VERSION 2.1.7
------------------------
 o set includeAll = TRUE by default <2015-03-03, Tue>
 o added an includeAll option in plot(compareCluster) <2015-02-26, Thu>
     refer to: https://github.com/GuangchuangYu/clusterProfiler/issues/9
 o fixed typo in groupGO <2015-02-26, Thu>
 
CHANGES IN VERSION 2.1.6
------------------------
 o add DOSE citation <2015-02-13, Fri>
 
CHANGES IN VERSION 2.1.5
------------------------
 o gseKEGG is also use online KEGG data by default. <2015-02-11, Wed>
 o change 'use.KEGG.db' parameter to 'use_internal_data', that can be used
   when I implement GO analysis with user specific annotation data <2015-02-11, Wed>
   
CHANGES IN VERSION 2.1.4
------------------------
 o update vignette <2015-02-11, Wed>
 o support formula like x ~ y + z, contributed by Giovanni Dall'Olio <2015-02-11, Wed>
 o add example of formula interface <2015-02-11, Wed>
 o formula interface for compareCluster contributed by Giovanni Dall'Olio <2015-02-11, Wed>
 
CHANGES IN VERSION 2.1.3
------------------------
 o update vignettes <2015-01-28, Wed>
 o fully support of using online version of KEGG in enrichKEGG,
   using online version is now by default of enrichKEGG <2015-01-28, Wed>
 o update CITATION <2015-01-28, Wed>
 
CHANGES IN VERSION 2.1.2
------------------------
 o support downloading latest KEGG annotation data <2015-01-27, Tue> 
 o update vignette to use BiocStyle <2015-01-27, Tue>
 
CHANGES IN VERSION 2.1.1
------------------------
 o add BugReports URL <2014-12-17, Wed>

CHANGES IN VERSION 1.99.0
------------------------
 o set version to 1.99.0 and will release version 2.0.0 in next BioConductor release. <2014-09-03, Wed>